@@ -3828,10 +3828,18 @@ See also: loc(), rloc(), rnum(), where()
 
 See also: sqrt(), power()
 & ROUND()
-  round(<number>, <places>)
+  round(<number>, <places>[, <pad>])
  
   Rounds <number> to <places> decimal places. <places> must be between
-  0 and config(float_precision).
+  0 and config(float_precision). If the optional <pad> argument is
+  true, the result will be padded with 0s if it would otherwise have
+  fewer than <places> digits after the decimal point.
+
+  Examples:
+  > think round(3.14159, 2)
+  3.14
+  > think round(3.5, 3, 1)
+  3.500
  
 See also: ceil(), floor(), bound(), trunc()
 & FN()
